<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:fontFamily="@font/platypiregular"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/splascalendar"
            android:layout_width="203dp"
            android:layout_height="164dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:src="@drawable/adduser" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/nombre"
                android:hint="@string/nombreRegistro"
                android:inputType="textPersonName|textCapWords"
                android:drawableStart="@drawable/person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/mail"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/contrasena"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:drawableStart="@drawable/lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/confirmarcontrasena"
                android:hint="@string/confirmarContrasena"
                android:inputType="textPassword"
                android:drawableStart="@drawable/lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnregistro"
            android:text="@string/registrar"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Tengocuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tengoCuenta"
            android:fontFamily="@font/platypiregular"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/btnvolver"
            android:text="@string/volver"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>