<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/splascalendar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:lottie_rawRes="@raw/calendar" />

        <!--  Titulo  -->
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textSize="30dp"
            android:fontFamily="@font/platypiregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--  Login  -->
        <Button
            android:id="@+id/btnlogin"
            android:text="@string/login"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--  Registro  -->
        <Button
            android:id="@+id/btnregistro"
            android:text="@string/registro"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</RelativeLayout>