<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#724C9F"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            android:backgroundTint="@color/md_theme_light_primary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/txtbienvenido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bienvenido"
                    android:textStyle="bold"
                    android:fontFamily="@font/platypiregular"
                    android:textSize="20sp"
                    android:textColor="#000000"/>

                <ProgressBar
                    android:id="@+id/progressdatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:backgroundTint="@color/black"/>

                <TextView
                    android:id="@+id/txtnombrePrincipal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:fontFamily="@font/platypiregular"
                    android:text="@string/nombrePrincipal"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtcorreoPrincipal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correoPrincipal"
                    android:visibility="gone"
                    android:textStyle="bold"
                    android:fontFamily="@font/platypiregular"
                    android:textSize="20sp"
                    android:textColor="#000000"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Agregar Nota -->
        <LinearLayout
            android:id="@+id/linearLayoutAgregarNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/imagenCrearNota"
                android:src="@drawable/add_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agregarNota"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/platypiregular"/>

        </LinearLayout>

        <!-- Repetir el patrón para los demás elementos -->

        <!-- Listar Nota -->
        <LinearLayout
            android:id="@+id/linearLayoutListarNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutAgregarNota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/imagenListarNota"
                android:src="@drawable/list_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listarNota"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/platypiregular"/>

        </LinearLayout>

        <!-- Archivar Nota -->
        <LinearLayout
            android:id="@+id/linearLayoutArchivarNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutListarNota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/imagenArchivarNota"
                android:src="@drawable/archive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/archivados"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/platypiregular"/>

        </LinearLayout>

        <!-- Mi Perfil -->
        <LinearLayout
            android:id="@+id/linearLayoutPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutArchivarNota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/imagenPerfil"
                android:src="@drawable/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfil"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/platypiregular"/>

        </LinearLayout>

        <Button
            android:id="@+id/cerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerrarSesion"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutPerfil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            android:fontFamily="@font/platypiregular"
            android:backgroundTint="@color/md_theme_light_primary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
